<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_tit_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|fill_vertical"
            android:text="@string/txt_a" />

        <EditText
            android:id="@+id/txt_a"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_tit_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:text="@string/txt_b" />

        <EditText
            android:id="@+id/txt_b"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_tit_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/txt_res" />

        <TextView
            android:id="@+id/txt_res"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_val" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_add"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="add_click"
            android:text="@string/btn_add"
            app:iconTint="#E91E63" />

        <Button
            android:id="@+id/but_sub"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="sub_click"
            android:text="@string/btn_sub" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_mul"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="mul_click"
            android:text="@string/btn_mult" />

        <Button
            android:id="@+id/but_div"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="div_click"
            android:text="@string/btn_div" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="sin_click"
            android:text="@string/btn_sin" />

        <Button
            android:id="@+id/btn_cos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="cos_click"
            android:text="@string/btn_cos" />

        <Button
            android:id="@+id/btn_tan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="tan_click"
            android:text="@string/btn_tan" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="sqrt_click"
            android:text="@string/btn_sqrt" />

        <Button
            android:id="@+id/btn_pow"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:onClick="pow_click"
            android:text="@string/btn_pow" />
    </LinearLayout>

</LinearLayout>